fixed email spacing and added new minified script file

--- a/Personal_Responsive/css/style.css
+++ b/Personal_Responsive/css/style.css
@@ -247,7 +247,7 @@ div#email_tile a {
 div#email_tile h2 {
 	position: absolute;
 	left: 20px;
-	top: 100px;
+	top: 85px;
 	color: white;
 	opacity: 0;
 	font: 28px Circula;
